fix(ui): make remove link button visible in assignment form

--- a/src/app/assignment/forms/assignment-form/assignment-form.component.scss
+++ b/src/app/assignment/forms/assignment-form/assignment-form.component.scss
@@ -33,4 +33,7 @@
 	margin-top: 8px;
 	margin-left: auto;
 	margin-right: 0;
+	app-icon {
+		fill: var(--text);
+	}
 }
